# aqua-farm-backend

./: .env  Cargo.toml  Dockerfile
src/: domaine.rs  element.rs  exploitation.rs  main.rs  production.rs  type_element.rs  type_exploitation.rs  type_user.rs  user.rs
