[package]
name = "aquafarm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }
bcrypt = "0.15"
jsonwebtoken = "8.1"
futures = "0.3"
actix-web-lab = "0.23.0"
actix-service = "2.0"
futures-util = "0.3"


